--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,7 +83,7 @@
             </div>
         </div>
 
-        <div class="row mt-4">
+        <div class="row mt-4" hidden>
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-header">
@@ -94,7 +94,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" hidden>
                 <div class="card">
                     <div class="card-header">
                         Currency Exchange Gains
